--- a/simple/src/main/res/values/strings.xml
+++ b/simple/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AppFrameworkSimple</string>
+    <string name="app_name">AppArchitectureSimple</string>
 </resources>
